--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ body,
 body {
   background-color: theme('colors.orange.200');
 }
+
+/* To remove input type number controls */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
